# sticker-maker

./: .gitignore  pyproject.toml  run.py
docs/superpowers/plans/: 2026-03-14-lake-sticker-cli.md  2026-03-14-whimsical-map-sticker.md
docs/superpowers/specs/: 2026-03-14-lake-sticker-cli-design.md  2026-03-14-whimsical-map-sticker-design.md
lake_sticker/: __init__.py  borders.py  cli.py  geometry.py  search.py  svg.py
lake_sticker/icons/: mapping.json
lake_sticker/map/: cli.py  features.py  fetch.py  icons.py  layout.py  render.py
tests/: conftest.py  test_borders.py  test_geometry.py  test_map_features.py  test_map_fetch.py  test_map_icons.py  test_map_layout.py  test_map_render.py  test_search.py  test_svg.py
